--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1567,11 +1567,8 @@ body P {
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   width: 100%;
-  overflow: visible;
-  height: 3rem;
-  z-index: 2;
 }
 .lists_container .btn {
   min-height: -moz-fit-content;
@@ -1596,15 +1593,9 @@ body P {
 }
 
 .list_btns_container {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 0.5rem;
-  width: 20rem;
+  position: relative;
   min-width: auto;
   max-width: 100%;
-  flex-wrap: wrap;
 }
 .list_btns_container .list_btn {
   background: var(--bgM);
@@ -1613,7 +1604,6 @@ body P {
   width: 100%;
   padding: 0.5rem 3rem;
   border-radius: 0.25rem;
-  background: none;
   min-width: auto;
 }
 .list_btns_container .list_btn .label_btn {
@@ -1644,12 +1634,12 @@ body P {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background: none;
+  background: var(--bgM);
   border-radius: 0;
   border-bottom: solid 2px var(--FC);
   min-height: -moz-fit-content;
   min-height: fit-content;
-  padding: 0;
+  padding: 0.5rem 1rem;
 }
 .list_btns_container .search_list_btn .label_btn {
   color: var(--TC);
@@ -1658,20 +1648,24 @@ body P {
 }
 .list_btns_container .search_list_btn .icon_container {
   display: block;
-  height: 3rem;
-  width: 3rem;
-}
-.list_btns_container .btns_container {
-  width: 100%;
+  height: 2rem;
+  width: 2rem;
+  padding: 0;
 }
 .list_btns_container .list_container {
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   transition: all 100ms ease;
   display: none;
+  bottom: 0;
+  left: 0;
+  width: auto;
   background: var(--NVC_T);
+  transform: translateY(100%);
+  z-index: 2;
 }
 .list_btns_container .list_down {
   display: flex;
@@ -1729,7 +1723,7 @@ body P {
   height: -moz-fit-content;
   height: fit-content;
   background: var(--NVC);
-  padding: 2rem;
+  padding: 4rem 2rem 2rem;
   opacity: 0;
   transition: var(--T_M);
   transform: translate(-50%, -50%);
