--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1802,6 +1802,7 @@ body {
     .portfolio_modal {
         max-width: 1800px;
         min-height: 20rem;
+        overflow: visible;
     }
 
     .alert_modal,
