Add --> adding illustration data to do page check

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2249,7 +2249,7 @@ body P {
 }
 
 .portfolio_section .portfolio_btn {
-  border-radius: 0.5rem;
+  border-radius: 0 0 0.5rem 0.5rem;
 }
 
 .nav_menu {
