--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2276,7 +2276,7 @@ body {
 }
 .portfolio_section {
     .portfolio_btn {
-        border-radius: 0.5rem;
+        border-radius: 0 0 0.5rem 0.5rem;
     }
 }
 .nav_menu {
