--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1933,12 +1933,6 @@ body P {
   justify-content: center;
   align-items: center;
 }
-.section_divider .content {
-  min-width: 250px;
-  width: 80%;
-  max-width: 1200px;
-  height: 100%;
-}
 .section_divider .quote_container {
   display: flex;
   flex-direction: row;
@@ -1996,9 +1990,7 @@ body P {
 
 .section {
   margin-bottom: 2rem;
-  /* min-height: calc(100vh - var(--NVH_F)); */
   height: auto;
-  /* min-height: var(--FS-FNVH); */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -2006,9 +1998,6 @@ body P {
 }
 
 .section_content {
-  min-width: 300px;
-  width: 1600px;
-  max-width: 100%;
   min-height: calc(100vh - var(--NVH));
   min-height: var(--FS_NVH);
   padding: 2rem;
@@ -2198,12 +2187,6 @@ body P {
   padding: 2rem;
   margin: 0;
 }
-.legals_section .footer_content {
-  min-width: 300px;
-  width: 1600px;
-  max-width: 100%;
-  padding: 0 2rem;
-}
 .legals_section .made_container {
   display: flex;
   flex-direction: column;
@@ -2252,6 +2235,12 @@ body P {
   border-radius: 0 0 0.5rem 0.5rem;
 }
 
+.content {
+  min-width: 250px;
+  width: 1600px;
+  max-width: 95%;
+}
+
 .nav_menu {
   position: sticky;
   top: 0;
@@ -2271,9 +2260,6 @@ body P {
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  min-width: 300px;
-  width: 1600px;
-  max-width: 95%;
 }
 .nav_menu .menu_btn {
   display: flex;
