--- a/src/css/style.css
+++ b/src/css/style.css
@@ -987,12 +987,15 @@ body P {
   align-items: center;
   position: absolute;
   opacity: 0;
-  background: var(--NVC_T);
+  background: var(--NVC);
   color: var(--TC_C);
   border-radius: 0.5rem;
   z-index: 2;
   display: none;
   transition: all 250ms ease;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .bio_bubble {
