--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1029,6 +1029,17 @@ body {
         stroke-width: 0px;
     }
 }
+.python_icon_svg {
+    .cls-1 {
+        fill: #366a96;
+    }
+    .cls-2 {
+        fill: #ffc836;
+    }
+    .cls-3 {
+        fill: #fff;
+    }
+}
 //^^TECH ICONS COLORS--OVER
 //^^SOCIAL ICONS COLORS-- START
 .wa_icon_svg,
